Clean extra files

--- a/construction-payment-request/package.json
+++ b/construction-payment-request/package.json
@@ -1,5 +1,12 @@
 {
     "name": "construction-request-for-payment",
     "version": "0.0.1",
-    "description": "Simple Application and Certificaton of Payment"
-  }
+    "description": "Simple Application and Certificaton of Payment",
+    "dependencies": {
+        "chai": "^4.1.2",
+        "chai-as-promised": "^7.1.1",
+        "chai-things": "^0.2.0",
+        "cicero-core": "^0.2.24",
+        "cicero-engine": "^0.2.24"
+    }
+}
